button wrapping fix

--- a/src/sass/partials/_buttons.scss
+++ b/src/sass/partials/_buttons.scss
@@ -31,9 +31,8 @@
 	@extend %visible;				// Fixes spacing issue in IE7
 	vertical-align: middle;			// Line up buttons in groups`
 	border: none;					// Normalize styles
-	padding: 0 1em;					// Consistent inner spacing
-	line-height: 3;					// Consistent inner spacing
-    height: 3em; 					// Consistent inner spacing
+	padding: 0.5em 1em;				// Consistent inner spacing
+	line-height: 1;					// Consistent inner spacing
 	font-size: 100%;				// Inherit font styles
     cursor:pointer;					// Force all buttons to appear clickable
 	@extend %no-underline;			// Removes text decoration from anchor links
